Fixes issue with css vars/scss vars and gutter spacing

--- a/scss/components/table.scss
+++ b/scss/components/table.scss
@@ -78,7 +78,7 @@ $block: #{$fd-namespace}-table;
     td,
     th {
         text-align: left;
-        padding: $fd-table-cell-padding $fd-table-cell-spacing/2;
+        padding: $fd-table-cell-padding calc(#{$fd-table-cell-spacing}/2);
 
         &:first-child {
             padding-left: $fd-table-cell-spacing;
@@ -142,7 +142,7 @@ $block: #{$fd-namespace}-table;
 
     &__context-menu-label {
         display: block;
-        padding: $fd-table-cell-padding $fd-table-cell-spacing/2;
+        padding: $fd-table-cell-padding calc(#{$fd-table-cell-spacing}/2);
 
         &::after {
             content: "";
