--- a/scss/core/root.scss
+++ b/scss/core/root.scss
@@ -52,10 +52,10 @@
   }
   @include fd-screen(xl) {
     --fd-padding-ui: #{map-get($fd-spacing, m)}; // 32px
-    --fd-width-gutter: #{fd-space(5)}; // 20px
+    --fd-width-gutter: #{map-get($fd-spacing, reg) - map-get($fd-spacing, base)}; // 20px
   }
   @include fd-screen(xxl) {
     --fd-padding-ui: #{map-get($fd-spacing, xxl)}; // 48px
-    --fd-width-gutter: #{fd-space(5)}; // 20px
+    --fd-width-gutter: #{map-get($fd-spacing, reg) - map-get($fd-spacing, base)}; // 20px
   }
 }
